# rs-interval

./: .gitignore  README.md
docs/: index.md  interval-map.md  interval-set.md  interval.md  map.md  set.md  types.md  version.md
scripts/: bump-version  update-tests
source/: CMakeLists.txt  compilers.cmake  rs-interval.hpp  rs-intervals.hpp
source/rs-interval/: format.hpp  interval-arithmetic-base.hpp  interval-arithmetic.hpp  interval-category-base.hpp  interval-map.hpp  interval-set.hpp  interval-type-base.hpp  interval.hpp  map.hpp  set.hpp  type-traits.hpp  types.hpp  version.hpp
source/rs-intervals/: arithmetic.hpp  category-base-class.hpp  interval-base-class.hpp  interval.hpp  map.hpp  set.hpp  types.hpp  version.hpp
source/test/: continuous-arithmetic-test.cpp  continuous-basic-test.cpp  continuous-boundary-addition-test.cpp  continuous-boundary-basic-test.cpp  continuous-boundary-comparison-test.cpp  continuous-boundary-multiplication-test.cpp  continuous-map-test.cpp  continuous-set-test.cpp  continuous-test.cpp  format-floating-point-test.cpp  format-integer-test.cpp  format-test.cpp  formatting-test.cpp  integral-arithmetic-test.cpp  integral-basic-test.cpp  integral-boundary-addition-test.cpp  integral-boundary-basic-test.cpp  integral-boundary-comparison-test.cpp  integral-boundary-multiplication-test.cpp  integral-map-test.cpp  integral-set-test.cpp  interval-basic-test.cpp  interval-boundary-addition-test.cpp  interval-boundary-compare-test.cpp  interval-boundary-comparison-test.cpp  interval-boundary-multiplication-test.cpp  interval-continuous-arithmetic-test.cpp  interval-continuous-map-test.cpp  interval-continuous-set-test.cpp  interval-continuous-test.cpp  interval-integral-arithmetic-test.cpp  interval-integral-map-test.cpp  interval-integral-set-test.cpp  interval-integral-test.cpp  interval-ordered-map-test.cpp  interval-ordered-set-test.cpp  interval-ordered-test.cpp  interval-stepwise-map-test.cpp  interval-stepwise-set-test.cpp  interval-stepwise-test.cpp  (+17 more)
src/: CMakeLists.txt  rs-interval.hpp
src/rs-interval/: arithmetic.hpp  category-base-class.hpp  interval-base-class.hpp  interval.hpp  map.hpp  set.hpp  types.hpp  version.hpp
src/test/: continuous-arithmetic-test.cpp  continuous-basic-test.cpp  continuous-boundary-addition-test.cpp  continuous-boundary-basic-test.cpp  continuous-boundary-comparison-test.cpp  continuous-boundary-multiplication-test.cpp  continuous-map-test.cpp  continuous-set-test.cpp  integral-arithmetic-test.cpp  integral-basic-test.cpp  integral-boundary-addition-test.cpp  integral-boundary-basic-test.cpp  integral-boundary-comparison-test.cpp  integral-boundary-multiplication-test.cpp  integral-map-test.cpp  integral-set-test.cpp  ordered-basic-test.cpp  ordered-boundary-basic-test.cpp  ordered-boundary-comparison-test.cpp  ordered-map-test.cpp  ordered-set-test.cpp  stepwise-basic-test.cpp  stepwise-boundary-basic-test.cpp  stepwise-boundary-comparison-test.cpp  stepwise-example.hpp  stepwise-map-test.cpp  stepwise-set-test.cpp  types-test.cpp  unit-test.cpp  unit-test.hpp  version-test.cpp
